optimize nutnull judgments